[package]
name = "server-framework"
version = "0.1.0"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/server-framework"
homepage = "https://github.com/EmbarkStudios/server-framework"
repository = "https://github.com/EmbarkStudios/server-framework"
description = "Opinionated framework for running network servers"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["http", "web", "framework", "service"]

[features]
default = ["tonic"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.4.1" }
axum-extra = "0.1"
clap = "=3.0.0-beta.5"
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = ["full"] }
metrics = "0.17"
metrics-exporter-prometheus = "0.6"
opentelemetry = { version = "0.16.0" }
opentelemetry-http = { version = "0.5.0" }
pin-project-lite = "0.2"
tokio = { version = "1.14", features = ["rt-multi-thread", "signal", "macros"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tracing = "0.1"
tracing-opentelemetry = "0.16"
uuid = { version = "0.8", features = ["v4"] }

# optional dependencies
tonic = { optional = true, version = "0.6", default_features = false, features = ["transport", "codegen"] }

[dependencies.tower-http]
version = "0.2.0"
features = [
    "map-request-body",
    "map-response-body",
    "request-id",
    "trace",
    "util",
]

[dev-dependencies]
assert-json-diff = "2.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[workspace]
members = ["examples/*"]
